--- a/src/AdminBundle/Resources/views/base.html.twig
+++ b/src/AdminBundle/Resources/views/base.html.twig
@@ -43,6 +43,7 @@
                 </a>
             </div>
 
+                                   
             <ul class="nav">
                 <li id="nav-home">
                     <a href="{{path('admin_index')}}">
@@ -67,7 +68,7 @@
                   <li id="nav-quote">
                     <a href="{{path('admin_quotes_list')}}">
                         <i class="ti-thought"></i>
-                        <p>Quote of the Day</p>
+                        <p>Quote Management</p>
 
                     </a>
                     </li>
@@ -79,9 +80,13 @@
 
                     </a>
                 </li>
+
             </ul>
         </div>
+
+
     </div>
+
 
     <div class="main-panel" >
         <nav class="navbar navbar-default">
@@ -97,29 +102,11 @@
                 </div>
                 <div class="collapse navbar-collapse">
                    <ul class="nav navbar-nav navbar-right" >
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:white;">
-                                <i class="ti-panel"></i>
-                                <p>Stats</p>
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color:white;">
-                                <i class="ti-bell"></i>
-                                <p class="notification">5</p>
-                                <p>Notifications</p>
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                              <li><a href="#">Notification 1</a></li>
-                              <li><a href="#">Notification 2</a></li>
-                              <li><a href="#">Notification 3</a></li>
-                              <li><a href="#">Notification 4</a></li>
-                              <li><a href="#">Another notification</a></li>
-                            </ul>
-                        </li>
+                     
                          <li class=" dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" type="button"  style="color:white;" aria-haspopup="true" aria-expanded="false"><p>ADMIN {{ app.user.username }}</p></a> 
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" type="button"  style="color:white;" aria-haspopup="true" aria-expanded="false"><p>ADMIN {{ app.user.username }}</p>
+                            <b class="caret"></b>
+                           </a> 
                             <ul class="dropdown-menu dropdown-menu-right dropdown-danger">
                                 <li class="dropdown-header">Account</li>
                                 <li class="dropdown-item"><a href="{{ path('my_profile_show') }}"><i class="fa fa-user"></i> Profile</a></li>
@@ -212,12 +199,14 @@
 </body>
 
 <!--   Core JS Files   -->
+<script src="{{ asset('assets/js/jquery-3.2.1.js') }}" type="text/javascript"></script>
+<script src="{{ asset('assets/js/jquery-ui-1.12.1.custom.min.js') }}" type="text/javascript"></script>
+<script src="{{ asset('assets/js/popper.js') }}" type="text/javascript"></script>
+
+
 <script src="{{ asset('assets/js/jquery-1.10.2.js') }}" type="text/javascript"></script>
 <script src="{{ asset('assets/js/bootstrap1.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('assets/js/tether.min.js') }}" type="text/javascript"></script>
-
-<!--  Checkbox, Radio & Switch Plugins -->
-<script src="{{ asset('assets/js/bootstrap-checkbox-radio.js')}} "></script>
 
 <!--  Charts Plugin -->
 <script src="{{ asset('assets/js/chartist.min.js') }}"></script>
@@ -230,6 +219,15 @@
 
 <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
 <script src="{{ asset('assets/js/paper-dashboard.js') }}"></script>
+
+<!-- Switches -->
+<script src="{{ asset('assets/js/bootstrap-switch.min.js') }}"></script>
+
+<!--  Plugins for Slider -->
+<script src="{{ asset('assets/js/nouislider.js') }}"></script>
+
+<!--  Paper Kit Initialization and functons -->
+<script src="{{ asset('assets/js/paper-kit.js') }}"></script>
 
 {% block js %} {% endblock %}
 
