--- a/src/AdminBundle/Resources/views/quotes/edit.html.twig
+++ b/src/AdminBundle/Resources/views/quotes/edit.html.twig
@@ -9,9 +9,22 @@
 {% form_theme form 'bootstrap_3_layout.html.twig' %}
     {{  form_start(form) }}
     {{   form_widget(form) }}
-    <button type="submit" class="btn btn-primary"> EDIT QUOTE</button>
+    <button type="submit" class="btn btn-primary" onClick="{return validate();}"> EDIT QUOTE</button>
     {{  form_end(form) }}
 
 </div>
 
+{% endblock %}
+
+{% block js %}
+<script language='JavaScript'>
+    function validate()
+    {
+      conf = confirm("Are you sure you want to save changes?");
+      if (conf)
+        return true;
+      else
+          return false;
+    }
+  </script>
 {% endblock %}
