--- a/src/AdminBundle/Resources/views/quotes/quotecatg.html.twig
+++ b/src/AdminBundle/Resources/views/quotes/quotecatg.html.twig
@@ -28,7 +28,7 @@
                 <button class="btn btn-info"><span class="ti-pencil"></span></button></a>
 
                 <a href="{{ path('admin_quotecatg_delete', {id:quote_category.id} ) }} ">
-                <button class="btn btn-danger"><span class="ti-trash"></span></button></a>
+                <button class=" btn btn-danger" onClick="{return validate();}"><span class="ti-trash"></span></button></a>
                 </td>
                 
                 {% endfor %}
@@ -47,4 +47,15 @@
 <script> 
     $('#nav-quotecatg').addClass('active');
 </script>
-{% endblock %}
+
+<script language='JavaScript'>
+    function validate()
+    {
+      conf = confirm("Are you sure you want to delete quote?");
+      if (conf)
+        return true;
+      else
+          return false;
+    }
+  </script>
+  {% endblock %}
