--- a/app/Resources/views/default/landing.html.twig
+++ b/app/Resources/views/default/landing.html.twig
@@ -69,7 +69,7 @@
     <div class="container">
         <div class="motto text-center">
             {% if quote is not empty %}
-                <h1>Quote of the day</h1>
+                <h1>Quote for you</h1>
                 <h3>"{{ quote.content }}"</h3>
                 <h6>{{ quote.quoteBy }}</h6>
             {% else %}
