--- a/app/Resources/views/shout/show.html.twig
+++ b/app/Resources/views/shout/show.html.twig
@@ -1,5 +1,10 @@
 {% extends "base.html.twig" %}
 
+{% block title %}
+    {{ shout.title }}
+{% endblock %}
+
+
 {% block content %}
     {% set slug = shout.slug %}
     {% set user = shout.user.username %}
