--- a/app/Resources/views/layouts/navbar.html.twig
+++ b/app/Resources/views/layouts/navbar.html.twig
@@ -53,7 +53,7 @@
                         <li class="dropdown-header">Account</li>
                         <li class="dropdown-item"><a href="{{ path('my_profile_show') }}"><i class="fa fa-user"></i> Profile</a></li>
                         {#<li class="dropdown-item"><a href="#pk"><i class="fa fa-cog"></i> Settings</a></li>#}
-                        <li class="dropdown-item"><a href="{{ path('change_password') }}"><i class="fa fa-asterisk"></i> Password</a></li>
+                        <li class="dropdown-item"><a href="{{ path('user_change_password') }}"><i class="fa fa-asterisk"></i> Password</a></li>
                         {#<li class="dropdown-item"><a href="#pk">Change Password</a></li>#}
                         {#<div class="dropdown-divider"></div>#}
                         {#<li class="dropdown-item"><a href="#pk"></a></li>#}
