--- a/app/Resources/views/shout/show.html.twig
+++ b/app/Resources/views/shout/show.html.twig
@@ -51,10 +51,13 @@
                                 {#<h4 class="media-heading"><a class="" href="{{ path('profile_show', {username: app.user.username}) }}">{{  app.user.username }}</a></h4>#}
                                 {#<div class="">#}
                                 {% form_theme form 'bootstrap_3_layout.html.twig' %}
-                                {{ form_start(form) }}
-                                {{ form_widget(form) }}
+                                {#{{ form_start(form) }}#}
+                                {{ form_label(form.content) }}
+                                {{ form_widget(form.content)}}
+                                {{ form_errors(form.content) }}
+                                {#{{ form_widget(form) }}#}
                                 <div class="pull-right">
-                                    <button type="submit" class="btn btn-default">post</button>
+                                    <button type="submit" class="btn btn-default mt-3">post</button>
                                 </div>
                                 {{ form_end(form) }}
 
