--- a/app/Resources/views/profile/show.html.twig
+++ b/app/Resources/views/profile/show.html.twig
@@ -24,7 +24,7 @@
                             <p>{{ user.about }}</p>
                         {% endif %}
                         <br />
-                        <btn class="btn btn-outline-default btn-round"><i class="fa fa-flag"></i> Report</btn>
+                        {#<btn class="btn btn-outline-default btn-round"><i class="fa fa-flag"></i> Report</btn>#}
                     </div>
                 </div>
                 <br/>
@@ -34,9 +34,9 @@
                             <li class="nav-item">
                                 <a class="nav-link active" data-toggle="tab" href="#follows" role="tab">Reviews</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" data-toggle="tab" href="#following" role="tab">Reports</a>
-                            </li>
+                            {#<li class="nav-item">#}
+                                {#<a class="nav-link" data-toggle="tab" href="#following" role="tab">Reports</a>#}
+                            {#</li>#}
                         </ul>
                     </div>
                 </div>
