--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -53,9 +53,9 @@
                                 <button type="submit" class="btn btn-danger btn-block btn-round">Sign in</button>
                                 <a href="{{ path('registration') }}" class="btn btn-default btn-block btn-round mt-2">Sign up</a>
                             </form>
-                            <div class="forgot">
-                                <a href="#" class="btn btn-link btn-danger">Forgot password?</a>
-                            </div>
+                            {#<div class="forgot">#}
+                                {#<a href="#" class="btn btn-link btn-danger">Forgot password?</a>#}
+                            {#</div>#}
                         </div>
                     </div>
                 </div>
