--- a/app/Resources/views/shoutee/search.html.twig
+++ b/app/Resources/views/shoutee/search.html.twig
@@ -17,7 +17,7 @@
                     <div class="card-block" style="height: 115px;">
                         <div class="media mt-3 mb-3">
                             <a class="media-left mr-2" href="#">
-                                <img class="img-rounded" src="{{ asset('assets/img/faces/joe-gardner-2.jpg') }}" style="width: 128px; height: 128px;">
+                                <img class="img-rounded" src="{{ asset('assets/img/') }}{{ user.avatar }}" style="width: 128px; height: 128px;">
                             </a>
                             <div class="media-body">
                                 <h4 class="media-heading"><a class="" href="{{ path('profile_show', {username: user.username}) }}">{{ user.username }}</a></h4>
