--- a/app/Resources/views/profile/show.html.twig
+++ b/app/Resources/views/profile/show.html.twig
@@ -9,7 +9,7 @@
             <div class="container">
                 <div class="owner">
                     <div class="avatar">
-                        <img src="../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                        <img src="{{ asset('assets/img/') }}{{ user.avatar }}" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                     </div>
                     <div class="name">
                         <h4 class="title">{{ user.username }}<br/></h4>
