--- a/src/AdminBundle/Resources/views/base.html.twig
+++ b/src/AdminBundle/Resources/views/base.html.twig
@@ -109,7 +109,7 @@
                            </a> 
                             <ul class="dropdown-menu dropdown-menu-right dropdown-danger">
                                 <li class="dropdown-header">Account</li>
-                                <li class="dropdown-item"><a href="{{ path('my_profile_show') }}"><i class="fa fa-user"></i> Profile</a></li>
+                                <li class="dropdown-item"><a href="{{ path('admin_profile') }}"><i class="fa fa-user"></i> Profile</a></li>
                                 {#<li class="dropdown-item"><a href="#pk"><i class="fa fa-cog"></i> Settings</a></li>#}
                                 <li class="dropdown-item"><a href="{{ path('change_password') }}"><i class="fa fa-asterisk"></i> Password</a></li>
                                 {#<li class="dropdown-item"><a href="#pk">Change Password</a></li>#}
