--- a/src/AdminBundle/Resources/views/shouts/list.html.twig
+++ b/src/AdminBundle/Resources/views/shouts/list.html.twig
@@ -18,7 +18,6 @@
                      <th>ID</th>
                      <th>Title</th>
                      <th>Content</th>
-                     <th>Shoutee</th>
                      <th>Date Created</th>
                      <th></th>                                    	  
                     </thead>			
@@ -26,10 +25,9 @@
        			<tbody>
 				{% for shout in shout %}
 				<tr>
-				<td><a href="{{ path('admin_quotes_list') }}"> {{shout.id}} </td>
+				<td> {{shout.id}} </td>
 				<td> {{shout.title}} </td>
 				<td> {{shout.body}} </td>
-				<td><a href="{{ path('admin_quotes_list') }}"> {{shout.user.username}} </a></td>
 
 				<td> {{shout.createdAt|date('M d, Y')}} </td>
 				<td> <button class="btn btn-warning" data-toggle="modal" data-target="#myModal">&nbsp;<a href="{{ path('shout_show', {'slug': shout.slug} ) }}">VIEW SHOUT</a></button>
