Bad words module in admin

--- a/src/AdminBundle/Resources/views/base.html.twig
+++ b/src/AdminBundle/Resources/views/base.html.twig
@@ -61,7 +61,7 @@
                 <li id="nav-shout">
                     <a href="{{path('admin_shouts_list')}}">
                         <i class="ti-announcement"></i>
-                        <p>Shouts</p>
+                        <p>Shouts Management</p>
 
                     </a>
                 </li>
@@ -77,6 +77,14 @@
                     <a href="{{path('admin_quotecatg_list')}}">
                         <i class="ti-wallet"></i>
                         <p>Quote Category</p>
+
+                    </a>
+                </li>
+
+                 <li id="nav-badwords">
+                    <a href="{{path('admin_badwords_list')}}">
+                        <i class="ti-face-sad"></i>
+                            <p>Bad Words Management</p>
 
                     </a>
                 </li>
