--- a/src/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/AdminBundle/Resources/views/Default/index.html.twig
@@ -16,9 +16,10 @@
                                     <div class="col-xs-5">
                                         <div class="icon-big icon-warning text-center">
                                             <i class="ti-user"></i>
-                                       </div>
-                                        <a href="{{path('admin_user')}}" title="User Management">
+                                            <a href="{{path('admin_user')}}" title="User Management">
                    
+                                       </div>
+                                        
                                     </div>
                                     <div class="col-xs-7">
                                         <div class="numbers" >
@@ -107,12 +108,14 @@
                                 <div class="row">
                                     <div class="col-xs-5">
                                         <div class="icon-big icon-info text-center">
-                                            <i class="ti-wallet"></i>
+                                            <i class="ti-face-sad"></i>
+                                            <a href="{{path('admin_badwords_list')}}" title="Bad Words Management">
                                         </div>
                                     </div>
                                     <div class="col-xs-7">
                                         <div class="numbers">
-                                            <p>Reports</p>
+                                            <p style="color:black">Bad Words</p>
+                                            {{badwords}}
                                             
                                         </div>
                                     </div>
@@ -120,7 +123,7 @@
                                 <div class="footer">
                                     <hr />
                                     <div class="stats">
-                                        <i class="ti-reload"></i> Updated now
+                                        <i class="ti-reload"></i> Update Bad Words
                                     </div>
                                 </div>
                             </div>
