--- a/src/AdminBundle/Resources/views/User/list.html.twig
+++ b/src/AdminBundle/Resources/views/User/list.html.twig
@@ -14,8 +14,24 @@
                                 <h4 class="title">Users </h4>
                                 <p class="category">List of users</p>
                                 <div class="pull-right"><a href="{{path('admin_user_new')}}"><button class="btn btn-success">Add Administrator +</a></button>
-                                
+
                             </div>
+
+                            <div class="pull-left"> 
+                            <form class="navbar-form" role="search">
+                                 <div class="input-group add-on">
+                                    <input class="form-control" style = "color:black" placeholder="Search" name="search" id="srch-term" type="text">
+                                        <div class="input-group-btn">
+                                             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                         </div>
+                                </div>
+                             </form>
+                             {% if app.request.get('search') is not empty %}
+                                <i> results for <b> "{{search}}" </b> </i> 
+                                {% endif %}
+                             </div>
+
+
                             <div class="content table-responsive table-full-width">
                                 <table class="table table-striped">
                                     <thead align="center">
@@ -53,6 +69,10 @@
                                             </td>
                 
                                         </tr>
+
+                                        {% else %}
+                                            <td><b>No results found</b></td>
+                                            
       
                                          {% endfor %}                                
                                     </tbody>
