--- a/src/AdminBundle/Resources/views/quotes/list.html.twig
+++ b/src/AdminBundle/Resources/views/quotes/list.html.twig
@@ -6,26 +6,56 @@
 {% block content %}
 <div class="container-fluid">
    <div class="card card-map">
+		
 		<div class="header">
-            <h4 class="title">Quote Management <div class="pull-right">
-            <a href="{{path('admin_quotes_new')}}"><button class="btn btn-success">Add Quote <span class="ti-plus"></span></button></a></div></h4>
-            <p class="category">Quotes randomly posted</p>
-       </div>
+		<h4 class="title">Quote Management </h4><p class="category">Quotes randomly posted</p>
+
+				<div class="pull-right">
+  					<a href="{{path('admin_quotes_new')}}"><button class="btn btn-success">Add Quote <span class="ti-plus"></span></button></a></div>
+					
+            				
+							<div class="pull-left">	
+							<form class="navbar-form" role="search">
+							   	 <div class="input-group add-on">
+							      	<input class="form-control" style = "color:black" placeholder="Search" name="search" id="srch-term" type="text">
+							      		<div class="input-group-btn">
+							       			 <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+							     		 </div>
+							    </div>
+							 </form>
+							 	{% if app.request.get('search') is not empty %}
+   								<i>	results for <b> "{{search}}" </b> </i> 
+   								{% endif %}
+   								
+				</div>
+			</div>
+
+		
+		
+
+      
+       		
+   		
+   		
 
 	<div class="content table-responsive table-full-width">
 		<table class="table table-striped">	
 			<thead>
-			<th>CATEGORY ID</th>
+			<th>QUOTE ID</th>
+			<th>CATEGORY</th>
 			<th>CONTENT</th>
 			<th>QUOTATOR</th>
+			
 			</thead>
 
 			<tbody>
 				{% for quote in quotes %}
 				<tr>
 				<td> {{quote.id}} </td>
+				<td> {{quote.category.name}} </td>
 				<td> {{quote.content}} </td>
 				<td> {{quote.quoteBy}} </td>
+
 				<td><a href="{{ path('admin_quotes_edit', {id:quote.id} ) }} ">
 				<button class="btn btn-info"><span class="ti-pencil"></span></button></a>
 
@@ -33,6 +63,10 @@
 				<button class="btn btn-danger"><span class="ti-trash"></span></button></a>
 				</td>
 				
+				 {% else %}
+                        <td><b>No results found</b></td>
+                 
+
 				{% endfor %}
 				</tr>
 			</tbody>
