--- a/src/AdminBundle/Resources/views/quotes/quotecatg.html.twig
+++ b/src/AdminBundle/Resources/views/quotes/quotecatg.html.twig
@@ -10,7 +10,21 @@
             <h4 class="title">Quote Category Management <div class="pull-right">
             <a href="{{path('admin_quotecatg_new')}}"><button class="btn btn-success">Add CATEGORY <span class="ti-plus"></span></button></a></div></h4>
             <p class="category">Add, edit and delete categories of quotes</p>
+
+            <div class="pull-left"> 
+                            <form class="navbar-form" role="search">
+                                 <div class="input-group add-on">
+                                    <input class="form-control" style = "color:black" placeholder="Search" name="search" id="srch-term" type="text">
+                                        <div class="input-group-btn">
+                                             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                         </div>
+                                </div>
+                             </form>
+                                {% if app.request.get('search') is not empty %}
+                                <i> results for <b> "{{search}}" </b> </i> 
+                                {% endif %}
        </div>
+
 
     <div class="content table-responsive table-full-width">
         <table class="table table-striped"> 
@@ -30,6 +44,10 @@
                 <a href="{{ path('admin_quotecatg_delete', {id:quote_category.id} ) }} ">
                 <button class="btn btn-danger"><span class="ti-trash"></span></button></a>
                 </td>
+
+                {% else %}
+                        <td><b>No results found</b></td>
+                 
                 
                 {% endfor %}
                 </tr>
