--- a/src/AdminBundle/Resources/views/shouts/list.html.twig
+++ b/src/AdminBundle/Resources/views/shouts/list.html.twig
@@ -12,6 +12,20 @@
                    <h4 class="title">Shouts List</h4>
                     <p class="category">shouts can be blocked, delete etc.</p>
                 </div>
+
+                <div class="pull-right"> 
+                            <form class="navbar-form" role="search">
+                                 <div class="input-group add-on">
+                                    <input class="form-control" style = "color:black" placeholder="Search" name="search" id="srch-term" type="text">
+                                        <div class="input-group-btn">
+                                             <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                         </div>
+                                </div>
+                             </form>
+                            	{% if app.request.get('search') is not empty %}
+                                <i> results for <b> "{{search}}" </b> </i> 
+                                {% endif %}
+                             </div>
     
             <div class="content table-responsive table-full-width">
     	          <table class="table table-hover">
@@ -35,7 +49,9 @@
 				<td> {{shout.createdAt|date('M d, Y')}} </td>
 				<td> <button class="btn btn-warning" data-toggle="modal" data-target="#myModal">&nbsp;<a href="{{ path('shout_show', {'slug': shout.slug} ) }}">VIEW SHOUT</a></button>
 				</td>
-				
+
+				{% else %}
+					<td><b>No results found</b></td>
 				{% endfor %}
 				</tr>
 				</tbody>
