--- a/app/Resources/views/registration/register.html.twig
+++ b/app/Resources/views/registration/register.html.twig
@@ -1,5 +1,10 @@
 {% extends 'layouts/signin_signup_base.html.twig' %}
 
+{% block title %}
+    Sign up
+{% endblock %}
+
+
 {% block content %}
     <nav class="navbar navbar-toggleable-md fixed-top navbar-transparent">
         <div class="container">
