--- a/app/Resources/views/security/reset_pass.html.twig
+++ b/app/Resources/views/security/reset_pass.html.twig
@@ -1,7 +1,7 @@
 {% extends "layouts/signin_signup_base.html.twig" %}
 
 {% block title %}
-    Forgot Password
+    Reset Password
 {% endblock %}
 
 {% block content %}
@@ -31,18 +31,22 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 offset-md-2" style="margin-top: 50px;">
-                        <h2 class="title">Forgot Password</h2>
-                        <h5 class="description">Lost your password? Please enter your email address. You will receive a link to create a new password via email.</h5>
+                        <h2 class="title">Reset Password</h2>
+                        {#<h5 class="description">Lost your password? Please enter your email address. You will receive a link to create a new password via email.</h5>#}
                         <br>
-                        <form method="post" role="form">
-                            {#<legend>Email</legend>#}
-                            <div class="form-group">
-                                <label for="email">Enter your email</label>
-                                <input type="text" name="token" value="{{ csrf_token('forgotPass') }}" hidden>
-                                <input type="email" class="form-control" name="email" id="email" placeholder="example@domain.com">
-                            </div>
-                            <button type="submit" class="btn btn-primary">Reset Password</button>
-                        </form>
+                        {% form_theme form 'bootstrap_3_layout.html.twig' %}
+                        {{ form_start(form) }}
+                        {{ form_widget(form) }}
+                            <button type="submit" class="btn btn-primary">Create New Password</button>
+                        {{ form_end(form) }}
+                        {#<form method="post" role="form">#}
+                            {#<div class="form-group">#}
+                                {#<label for="email">Enter your email</label>#}
+                                {#<input type="text" name="token" value="{{ csrf_token('forgotPass') }}" hidden>#}
+                                {#<input type="email" class="form-control" name="email" id="email" placeholder="example@domain.com">#}
+                            {#</div>#}
+                            {#<button type="submit" class="btn btn-primary">Reset Password</button>#}
+                        {#</form>#}
                     </div>
                 </div>
                 <br/><br/>
