--- a/app/Resources/views/profile/show.html.twig
+++ b/app/Resources/views/profile/show.html.twig
@@ -24,6 +24,7 @@
                             <p>{{ user.about }}</p>
                         {% endif %}
                         <br />
+                        <div class="text-center"><a href="{{ path('my_profile_show') }}" class="btn btn-warning btn-round"><i class="fa fa-edit"></i> Update Profile</a></div>
                         {#<btn class="btn btn-outline-default btn-round"><i class="fa fa-flag"></i> Report</btn>#}
                     </div>
                 </div>
