--- a/app/Resources/views/shout/shout_feed_content.html.twig
+++ b/app/Resources/views/shout/shout_feed_content.html.twig
@@ -2,6 +2,7 @@
 {% for shout in shouts %}
     {% set slug = shout.slug %}
     <div class="col-md-6">
+        {#{{ path('app_loud_new', {slug: shout.slug}) }}#}
         <div class="card card-danger mb-3 animated fadeIn">
             <div class="card-header">
                 {% set user = shout.user.username %}
