--- a/app/Resources/views/shoutee/search.html.twig
+++ b/app/Resources/views/shoutee/search.html.twig
@@ -37,6 +37,7 @@
                 </div>
                 <hr>
             {% endfor %}
+            <h5 class="text-center mb-3"><b>-End of Results-</b></h5>
         </div>
     </div>
 {% endblock %}
