--- a/app/Resources/views/shout/show.html.twig
+++ b/app/Resources/views/shout/show.html.twig
@@ -24,6 +24,7 @@
                         <hr>
                     </div>
                     <div class="panel-body clearfix">
+                        {#<p>{{ shout.body|md2html }}</p>#}
                         <p>{{ shout.body }}</p>
                     </div>
                     <hr>
