--- a/app/Resources/views/shout/show.html.twig
+++ b/app/Resources/views/shout/show.html.twig
@@ -24,8 +24,8 @@
                         <hr>
                     </div>
                     <div class="panel-body clearfix">
-                        {#<p>{{ shout.body|md2html }}</p>#}
-                        <p>{{ shout.body }}</p>
+                        <p>{{ shout.body|md2html }}</p>
+                        {#<p>{{ shout.body }}</p>#}
                     </div>
                     <hr>
                     <div class="panel-footer">
