--- a/app/Resources/views/shout/filter_problems_by_category.html.twig
+++ b/app/Resources/views/shout/filter_problems_by_category.html.twig
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4 offset-md-4 text-center">
-            <h5>Filter problems by</h5>
+            <h5>Filter shout by</h5>
         </div>
     </div>
     <div class="row mb-3">
