custom avatar functionality added

--- a/app/Resources/views/layouts/navbar.html.twig
+++ b/app/Resources/views/layouts/navbar.html.twig
@@ -54,6 +54,7 @@
                         <li class="dropdown-item"><a href="{{ path('profile_me') }}"><i class="fa fa-user"></i>My Profile</a></li>
                         {#<li class="dropdown-item"><a href="#pk"><i class="fa fa-cog"></i> Settings</a></li>#}
                         <li class="dropdown-header"> Settings</li>
+                        <li class="dropdown-item"><a href="{{ path('my_profile_avatar') }}"><i class="fa fa-user-secret"></i>Change Avatar</a></li>
                         <li class="dropdown-item"><a href="{{ path('my_profile_show') }}"><i class="fa fa-edit"></i>Update Profile</a></li>
                         <li class="dropdown-item"><a href="{{ path('user_change_password') }}"><i class="fa fa-asterisk"></i>Update Password</a></li>
                         {#<li class="dropdown-item"><a href="#pk">Change Password</a></li>#}
