--- a/app/Resources/views/security/change_pass.html.twig
+++ b/app/Resources/views/security/change_pass.html.twig
@@ -1,9 +1,14 @@
 {% extends "base.html.twig" %}
 
+{% block title %}
+    Update Password
+{% endblock %}
+
 {% block content %}
-    <div class="row">
+    <div class="row bg-faded">
         <div class="col-md-6 offset-3 mt-5 mb-5">
-            <legend>Change Password</legend>
+            <legend class="text-center">Change Password</legend>
+            <hr>
             <div class='uil-reload-css' style=''><div></div></div>
             {% form_theme form 'bootstrap_3_layout.html.twig' %}
             {{ form_start(form) }}
